--- a/client/templates/chat/chat_feed.less
+++ b/client/templates/chat/chat_feed.less
@@ -1,7 +1,7 @@
 .chat-feed {
   height:400px;
-  width: 350px;
-  position: fixed;
+  width: 100%;
+  position: relative;
   bottom: 0;
   right: 0;
   overflow-x: hidden;
