Replaced List of logged in users with # of logged in users

--- a/client/templates/chat/chat_feed.html
+++ b/client/templates/chat/chat_feed.html
@@ -1,6 +1,7 @@
 <template name="chat_feed">
     <div class="chat-feed">
         <div class="panel-body msg_container_base">
+            <p># Users Online: {{countUsersOnline}}</p>
             {{#each messages}}
                 {{#if isOwnMessage}}
                     <div class="row msg_container base_sent">
