--- a/client/templates/layouts/game.html
+++ b/client/templates/layouts/game.html
@@ -29,7 +29,7 @@
                     </div>
 
                 </div>
-                <div class="panel-body">
+                <!-- <div class="panel-body">
                     Players
                     <ul>
                         <li>Alex</li>
@@ -37,7 +37,7 @@
                         <li>Garik</li>
                         <li>Marcus</li>
                     </ul>
-                </div>
+                </div> -->
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">
