--- a/client/templates/draw/draw.html
+++ b/client/templates/draw/draw.html
@@ -1,3 +1,3 @@
 <template name="drawCanvas">
-	<canvas id="draw-canvas"></canvas>
+	<canvas id="draw-canvas" width="300" height="500"></canvas>
 </template>
