new layout, no chat, misc fixes

--- a/client/templates/game/game.less
+++ b/client/templates/game/game.less
@@ -1,16 +1,8 @@
-.game-container {
-  margin-top: 10px;
-}
-
 #main-nav {
   float: right;
   position: relative;
   top: -34px;
 }
-
-//#main-nav > ul > li > a:hover {
-//  background-color: initial;
-//}
 
 #main-nav .nav a:hover,
 #main-nav .nav .open > a,
@@ -18,4 +10,13 @@
 #main-nav .nav .open > a:focus {
   background-color: initial;
 
+}
+
+.game-area {
+  margin: 5px auto;
+  width: 300px;
+}
+
+.panel-body {
+  padding: 0;
 }
