handle right guess, front-end timer, force login

--- a/client/templates/game/game.html
+++ b/client/templates/game/game.html
@@ -25,6 +25,9 @@
 
         <div class="panel-body">
             {{> drawCanvas}}
+            <div class="timer">
+                {{timer}}
+            </div>
         </div>
 
         <div class="panel-footer">
